# UDP-ChatRoom

./: README.md
CONSOLE/curriculum_design_client/receiver/: CMakeLists.txt  main.cpp
CONSOLE/curriculum_design_client/sender/: CMakeLists.txt  Client.h  main.cpp
CONSOLE/curriculum_design_sever/: CMakeLists.txt
GUI/客户端/reciver/: CMakeLists.txt  main.cpp  outChatWidget.cpp  outChatWidget.h  reciverSocket.cpp  reciverSocket.h
GUI/客户端/sender/: CMakeLists.txt  ChatWidget.cpp  ChatWidget.h  InputIpWidget.cpp  InputIpWidget.h  ListWidget.cpp  ListWidget.h  MyWidget.cpp  MyWidget.h  RegisterWidget.cpp  RegisterWidget.h  client.cpp  client.h  main.cpp
GUI/服务端/curriculum_design_sever/: Server.h  main.cpp
基于UDP的控制台聊天程序源代码/客户端/: receiver.cpp  sender.cpp
基于UDP的控制台聊天程序源代码/服务器/: server.cpp
